--- a/.bazelrc
+++ b/.bazelrc
@@ -18,7 +18,7 @@ build --copt='-Wno-ignored-attributes'
 build --copt='-fembed-bitcode'
 # Temporarily set the incompatibility flag for Bazel 0.27.0 and above
 build --incompatible_disable_deprecated_attr_params=false
-build --incompatible_depset_is_not_iterable=false
+# build --incompatible_depset_is_not_iterable=false
 build --enable_platform_specific_config
 
 # Linux
